# napari-DeepSpot

./: LICENSE  MANIFEST.in  README.md  environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/napari_deepspot/: _dock_widget.py  deepSpot_functions.py
src/napari_deepspot/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
