[metadata]
name = napari-DeepSpot

author = Emmanuel Bouilhol
author_email = emmanuel.bouilhol@u-bordeaux.fr
url = https://github.com/ebouilhol/napari-DeepSpot
license = MIT
description = RNA spot enhancement for fluorescent microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/ebouilhol/napari-DeepSpot/issues
    Documentation = https://github.com/ebouilhol/napari-DeepSpot#README.md
    Source Code = https://github.com/ebouilhol/napari-DeepSpot
    User Support = https://github.com/ebouilhol/napari-DeepSpot/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
include_package_data = True
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pytest
    pytest-cov
    pytest-xvfb
    pytest-qt
    napari
    qtpy==1.9.0
    pyqt5
    tensorflow
    scikit-image
    numpy
    opencv-python

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-DeepSpot = napari_deepspot
